# flask-babel

./: config.py  messages.pot  pyproject.toml  run.py
app/: __init__.py
app/mod_main/: views.py
app/templates/main/: index.html
app/translations/fr/LC_MESSAGES/: messages.mo  messages.po
