[tool.poetry]
name = "simple-babel"
version = "0.1.0"
description = ""
authors = ["lanbo.gao <lanbo.gao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Babel = "^2.9.1"
Flask = "^1.1.2"
Flask-Babel = "^1.0.0"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
